adjust settings